2002-02-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup): Setup
	wl-message-buffer-prefetch-get-next-function.

2002-02-02 ABE Yasushi <yasushi@stbbs.net> / nom@quickhack.net

	* ruby-ext/lib/mhc-schedule.rb 
	(MhcScheduleItem#todo?): New function.
	(MhcScheduleItem#sch_to_slot): Change for TODO articles.

2002-01-16  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-get-import-buffer): Support Mew 3.0 or
	later.

2002-01-11  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc-wl.el (mhc-wl-summary-exit): Call
	`wl-summary-toggle-disp-msg'.

2002-01-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc-wl.el (mhc-wl-summary-exit): Delete other windows
	if exit buffer is folder mode.

2001-12-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc.el (mhc-minibuf): Changed order of `require'.

	* emacs/mhc-wl.el (mhc-wl-summary-filename): Cause an error when
	no message exists on buffer.

	* emacs/mhc-e21.el (mhc-input-category): Define with
	`completing-read-multiple'.

	* emacs/mhc-minibuf.el (mhc-input-category): Define only when
	it is not defined.

2001-10-30  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* emacs/mhc.el: Use bitmap-mule on NTEmacs21.

2001-10-28  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* ruby-ext/lib/mhc-kconv.rb: Renamed from mhc-kconv.rb.in.
	Change my mail address.
	(MhcKconv): Detect kanji code in runtime.

	* emacs/mhc-calendar.el: Change my mail address.

	* mhc2ol.in (RepeatPattern::Period::get_duration): New method.
	(usage): Improve command-line help.
	(Exporter::setup_ol_appointments): Set duration of schedules
	explicitly.

	* configure.rb: remove ruby-ext/lib/mhc-kconv.rb.in.

2001-10-17  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess/guess):
	sort consider match length in case scores are same.

2001-10-14  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* 00readme.w32.jis: Add a way to specify MUA using configure.rb.
