@@ -1,3 +1,9 @@
+2002-03-15  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-mew.el (mhc-mew-new-virtual-type): New variable.
+	(mhc-mew/summary-filename-regex, mhc-mew/schedule-foldermsg):
+	Support Mew 3.0.55 or later.
+
 2002-02-07  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup): Setup
